# automated-invoice-creation-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/szamlazz_collections_mcp/: __init__.py  config.py  emailer.py  models.py  server.py  storage.py  szamlazz_client.py  utils.py
src/szamlazz_collections_mcp/templates/: reminder_en.txt.j2  reminder_hu.txt.j2
src/szamlazz_collections_mcp/xml_templates/: generate_invoice.xml.j2  query_invoice_pdf.xml.j2  query_invoice_xml.xml.j2  register_payment.xml.j2
tests/: test_overdue_logic.py  test_storage.py  test_templates.py
